adding google map link

--- a/src/main/webapp/frontend/styles/shared-styles.html
+++ b/src/main/webapp/frontend/styles/shared-styles.html
@@ -32,6 +32,8 @@
 <link rel="stylesheet" href="views/report-details.css">
 <link rel="stylesheet" href="views/view-frame.css">
 
+<link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+
 <custom-style>
   <style include="lumo-badge">
     :root {
@@ -99,6 +101,11 @@
     .app-header-outer,
     .app-footer-outer {
       z-index: 3;
+    }
+    
+    .googleAnchor {
+      color: green;
+      font-size: 24px;
     }
     
   </style>
